--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     },
     "cmake.configureArgs": [
        "-DWITH_COVERAGE=ON"
-    ]
+    ],
+    "files.associations": {
+        "cstdlib": "cpp"
+    }
 }
