Serialize API shell implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -6,11 +6,14 @@ include_directories(${PROJECT_SOURCE_DIR}/libdict/include)
 
 add_unit_test(
     TARGET fdb
-    SOURCES fdbTests.cpp
+    SOURCES fdbInitTests.cpp
+            fdbOpsTests.cpp
             fdbTxnTests.cpp
+            fdbSerializeTests.cpp
             RunAllTests.cpp
             ../src/common/log.c
             ../src/db/db.c
+            ../src/db/db_serialize.c
             ../src/txn/txn.c
     LIBRARIES dict
 
