Suport traversal of tree with a callback
 - Use libdict version that supports functors
 - Support traversal of records with callback
 - Remove libdict sources from coverage

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,22 @@ option(WITH_TESTS "Build tests (requires CppUTest)." OFF)
 
 if(WITH_COVERAGE)
 	set(WITH_TESTS ON)
+    include(CodeCoverage)
+    # Enable code coverage.
+    # Build with debugging information to make the output meaningful.
+    # Disable optimizations to get the most accurate results.
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --coverage -g -O0")
+	set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} --coverage -g -O0")
+
+    if (NOT TARGET coverage)
+        SETUP_TARGET_FOR_COVERAGE(
+            coverage
+            ctest
+            coverage-report-fdb
+			libdict/*)
+    endif()
+else()
+    message(STATUS "COVERAGE disabled. ")
 endif()
 include(UseCppUTest)
 
@@ -30,6 +46,7 @@ add_subdirectory(libdict)
 add_subdirectory(src)
 add_subdirectory(tests)
 add_subdirectory(examples)
+
 
 
 set(CPACK_PACKAGE_NAME "fdb")
