--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,9 @@
     "files.associations": {
         "cstdlib": "cpp",
         "fdb_log.h": "c",
-        "fdb_private.h": "c"
+        "fdb_private.h": "c",
+        "string": "c",
+        "string_view": "c",
+        "vector": "c"
     }
 }
