--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,7 @@ publish_cov_results:
   when: on_success
   script:
     - mkdir public/
-    - mv build/coverage-report-fdb public/coverage
+    - mv build/coverage-report-fdb public/coverage || true
   artifacts:
     paths:
       - public
